--- a/exam.html
+++ b/exam.html
@@ -7,12 +7,11 @@
 </head>
 <body>
     <h1>PS32250 Trieu Quoc Thang</h1>
-    <table>
-        <tr>
-            <td>Centro comercial Mctezuma</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-        </tr>
-    </table>
+    <div>
+        <h2>Fpoly</h2>
+        <p>Trường Cao đẳng FPT Polytechnic thuộc Tổ chức Giáo dục FPT,
+          là cơ Sở đào tạo đào tạo trong lòng doanh nghi65p</p>
+        
+    </div>
 </body>
 </html>
