--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <h2>Fpoly</h2>
         <p>Trường Cao đẳng FPT Polytechnic thuộc Tổ chức Giáo dục FPT,
-          là cơ Sở đào tạo đào tạo trong lòng doanh nghi65p</p>
+          là cơ Sở đào tạo đào tạo trong lòng doanh nghiệp</p>
         
     </div>
 </body>
